--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
+  "expo": {
+    "output": "export"
+  },
   "private": true
 }
