--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -t -d dist",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
