--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "deploy": "gh-pages -t -d dist",
-    "test": "jest --watchAll",
+    "deploy": "rm -rf gh-pages && mkdir gh-pages && cp -r dist/. gh-pages && cd gh-pages && git init && git add . && git commit -m \"Deploy to gh-pages\" && git branch -M main && git remote add origin https://github.com/josielsn93/kitten-generator.git && git push -f origin main:gh-pages",
+    "test": "jest --watchAll",    
     "lint": "expo lint"
   },
   "jest": {
@@ -54,8 +54,6 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "expo": {
-    "output": "export"
-  },
+  "expo": {},
   "private": true
 }
