--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "deploy": "rm -rf gh-pages && mkdir gh-pages && cp -r dist/. gh-pages && cd gh-pages && git init && git add . && git commit -m \"Deploy to gh-pages\" && git branch -M main && git remote add origin https://github.com/josielsn93/kitten-generator.git && git push -f origin main:gh-pages",
+    "deploy": "expo export -p web --output-dir dist && rm -rf gh-pages && mkdir gh-pages && cp -r dist/. gh-pages && cd gh-pages && git init && git add . && git commit -m Deploy to gh-pages && git branch -M main && git remote add origin https://github.com/josielsn93/kitten-generator.git && git push -f origin main:gh-pages",
     "test": "jest --watchAll",    
     "lint": "expo lint"
   },
